--- a/Exercise2/app/src/main/AndroidManifest.xml
+++ b/Exercise2/app/src/main/AndroidManifest.xml
@@ -10,11 +10,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Exercise2"
+        android:theme="@style/Theme.Demor_Cyclefile"
         tools:targetApi="31">
         <activity
-            android:name=".Subactivity"
-            android:exported="false" />
+            android:name=".SubActivity"
+            android:exported="false"
+            android:theme="@style/Theme.AppCompat.Dialog"/>
         <activity
             android:name=".MainActivity"
             android:exported="true">
